finnish all search function

--- a/templates/test.html
+++ b/templates/test.html
@@ -190,7 +190,7 @@
 
     option = {
 	    title: {
-	        text: ''
+	        text: '基于知识图谱的论文管理系统'
 	    },
 	    tooltip: {},
 	    animationDurationUpdate: 1500,
