--- a/templates/navigate.html
+++ b/templates/navigate.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bootstrap 3.3.7 ">
-    <meta name="author" content="zhangziliang04@sina.com">
+    <meta name="author" content="Sinmitom@163.com">
     <meta name="keyword" content="主页">
     <link rel="shortcut icon" href="/static/img/favicon.png">
 
@@ -51,11 +51,14 @@
                 </div>
                 <div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">-</a></li>
                         <li><a href="/search_entity">实体查询</a></li>
-                        <li><a href="/search_relation">关系查询</a></li>
-
-                            
+                        {% if current_user.is_authenticated %}
+                            <li><a href="/search_relation">关系查询</a></li>
+                            <li><a href="/">-</a></li>
+                            <li><a href= "{{ url_for('logout') }}">登出</a> </li>
+                        {% else %}
+                            <li><a href="/login">登录</a> </li>
+                        {% endif %}
                     </ul>
                 </div>
                 </div>
