--- a/templates/test.html
+++ b/templates/test.html
@@ -7,12 +7,12 @@
     <script src="/static/js/echarts.js"></script>
     
 </head>
-<title>关系</title>
+<title>登录</title>
 <div class="container">
     <div class="row">
     <!--head start-->
     <div class="col-md-12">
-        <h3 class="page-header"><i class="fa fa-link" aria-hidden="true"></i> 关系查询 </h3>
+        <h3 class="page-header"><i class="fa fa-link" aria-hidden="true"></i> 登录 </h3>
             <ol class="breadcrumb">
                 <li><i class="fa fa-home"></i><a href="\">主页</a></li>
                 <li><i class="fa fa-link" aria-hidden="true"></i>关系查询</li>
