finish update entity function

--- a/templates/navigate.html
+++ b/templates/navigate.html
@@ -55,6 +55,7 @@
                         {% if current_user.is_authenticated %}
                             <li><a href="/search_relation">关系查询</a></li>
                             <li><a href="/">-</a></li>
+                            <li><a href= "{{ url_for('update') }}">更新</a> </li>
                             <li><a href= "{{ url_for('logout') }}">登出</a> </li>
                         {% else %}
                             <li><a href="/login">登录</a> </li>
