--- a/templates/entity.html
+++ b/templates/entity.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
         <h3 class="page-header"><i class="fa fa-share-alt" aria-hidden="true"></i> 实体查询 </h3>
             <ol class="breadcrumb">
-                <li><i class="fa fa-home"></i><a href="\">Home</a></li>
+                <li><i class="fa fa-home"></i><a href="\search_entity">Home</a></li>
                 <li><i class="fa fa-share-alt" aria-hidden="true"></i>实体查询</li>
             </ol>
     </div>
