--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
                 <div class="col-md-12">
                     <h4 class="page-header"><i class="fa fa-search"></i>实体识别 </h4>
                     <ol class="breadcrumb">
-                        <li><i class="fa fa-home"></i><a href="\">主页</a></li>
+                        <li><i class="fa fa-home"></i><a href="\search_entity">主页</a></li>
                         <li><i class="fa fa-search"></i>实体识别</li>
                     </ol>
                 </div>
