--- a/templates/relation.html
+++ b/templates/relation.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
         <h3 class="page-header"><i class="fa fa-link" aria-hidden="true"></i> 关系查询 </h3>
             <ol class="breadcrumb">
-                <li><i class="fa fa-home"></i><a href="\">主页</a></li>
+                <li><i class="fa fa-home"></i><a href="\search_entity">主页</a></li>
                 <li><i class="fa fa-link" aria-hidden="true"></i>关系查询</li>
             </ol>
     </div>
