--- a/templates/test.html
+++ b/templates/test.html
@@ -3,56 +3,99 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
     <meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>                         -->
     <script src="/static/js/echarts.js"></script>
-    
+
 </head>
-<title>登录</title>
+<title>更新图谱</title>
 <div class="container">
     <div class="row">
     <!--head start-->
     <div class="col-md-12">
-        <h3 class="page-header"><i class="fa fa-link" aria-hidden="true"></i> 登录 </h3>
+        <h3 class="page-header"><i class="fa fa-link" aria-hidden="true"></i> 更新图谱 </h3>
             <ol class="breadcrumb">
-                <li><i class="fa fa-home"></i><a href="\">主页</a></li>
-                <li><i class="fa fa-link" aria-hidden="true"></i>关系查询</li>
+                <li><i class="fa fa-home"></i><a href="\search_entity">主页</a></li>
+                <li><i class="fa fa-link" aria-hidden="true"></i>更新图谱</li>
             </ol>
     </div>
-    
+
     <div class = "col-md-12">
     	<div class = "panel panel-default">
 			<header class="panel-heading">
-            查询条件：
+            更新图谱：
        		</header>
        		<div class = "panel-body">
-				<form method="post" action="/search_relation">
-                    {{ form.csrf_token }}
+				<form method="post" >
+
 					<div class="input-group">
-						{{ form.entity1(class="form-control", placeholder="实体１", style="width:200px;margin:0px 20px;") }}
-						{{ form.relation(class="form-control", style="width:200px;margin:0px 20px;") }}
-						{{ form.entity2(class="form-control", placeholder="实体2", style="width:200px;margin:0px 20px;") }}
-						{{ form.submit(class="btn btn-primary", style="background-color:#4592fe;margin:0px 20px;") }}
+						<div class="layui-input-inline" style="width: 300px;">
+
+							<select name="selectBox" id="selectBox" lay-filter="selectBox" onchange="showform()" >
+								<option value="0">选择实体类型</option>
+								<option value="1">Paper</option>
+								<option value="2">Author</option>
+								<option value="3">Affiliation</option>
+								<option value="4">Venue</option>
+								<option value="5">Concept</option>
+							</select>
+							</br></br>
+
+						 </div>
 					</div>
-                </form>
+
+				<!-- 当选择Paper时，显示： -->
+				<div class="form-row" id="Paper-form" style="display: none;">
+					paperId   <input type="text" name="paperId" >
+					paperTitle <input type="text" name="paperTitle" >
+					paperYear  <input type="text" name="paperYear" >
+					<input class="button" type="submit" name="submit" value="Submit">
+				</div>
+				<!-- 当选择Author时，显示： -->
+				<div class="form-row" id="Author-form" style="display: none;">
+					AuthorId   <input type="text" name="authorId" >
+					AuthorName <input type="text" name="authorName" >
+					<input class="button" type="submit" name="submit" value="Submit">
+				</div>
+				<!-- 当选择Affiliaiton时，显示： -->
+				<div class="form-row" id="Affiliation-form" style="display: none;">
+					AffiliationId   <input type="text" name="affiliationId" >
+					AffiliationName <input type="text" name="affiliationName" >
+					<input class="button" type="submit" name="submit" value="Submit">
+				</div>
+				<!-- 当选择Venue时，显示： -->
+				<div class="form-row" id="Venue-form" style="display: none;">
+					VenueId   <input type="text" name="venueId" >
+					VenueName <input type="text" name="venueName" >
+					<input class="button" type="submit" name="submit" value="Submit">
+				</div>
+				<!-- 当选择Concept时，显示： -->
+				<div class="form-row" id="Concept-form" style="display: none;">
+					ConceptId   <input type="text" name="conceptId" >
+					ConceptName <input type="text" name="conceptName" >
+					<input class="button" type="submit" name="submit" value="Submit">
+				</div>
+				</form>
 			</div>
 		</div>
 	</div>
-	{% if ctx %}
+
+	{% if not ctx %}
 	<div class = "col-md-12">
 		<div class = "panel panel-default">
 			<header class = "panel-heading">
-				查询结果：
+				更新结果：
 			</header>
 			<div class = "panel-body">
 				<div style="padding: 2%">
-					<h2>暂未找到相应的匹配</h2>
+					<h2>数据库中尚未添加该实体</h2>
 				</div>
 			</div>
 		</div>
 	</div>
 	{% endif %}
 
-    {% if searchResult %}
+    {% if entityRelation %}
 
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
     <div class = "col-md-12">
@@ -65,6 +108,8 @@
             </div>
         </div>
     </div>
+{% endif %}
+{% if entityRelation %}
     <!-- Footable -->
     <div class = "col-md-12">
 	    <div class="panel panel-default">
@@ -76,206 +121,172 @@
 	        </div>
 	    </div>
 	</div>
-    {% endif %}
+		{% endif %}
 
 </div>
+</div>
+
+{% if entityRelation %}
 <script src="/static/js/jquery-1.8.3.min.js"></script>
-{% if searchResult %}
 <script type="text/javascript">
-	var searchResult = {{searchResult|safe}}
-	//用表格列出所有的关系
-    tableData = []
-    for (var i = 0 ; i < searchResult.length ; i++){
-        relationData = {} ;
-        relationData['entity1'] = searchResult[i]['n1']['Name'];
-        relationData['relation'] = searchResult[i]['rel']['type'] ;
-        relationData['entity2'] = searchResult[i]['n2']['Name'] ;
-        tableData.push(relationData) ;
+var entityRelation = {{ entityRelation| safe}};
+//用表格列出所有的关系
+tableData = []
+console.log("enti", entityRelation)
+for (var i = 0; i < entityRelation.length; i++) {
+    relationData = {};
+    relationData['Id'] = entityRelation[i]['entity']['Id'];
+    relationData['Name'] = entityRelation[i]['entity']['Name'];
+    if('Abstract' in entityRelation[i]['entity'])
+    {
+    	relationData['Info'] = entityRelation[i]['entity']['Abstract'];
     }
-    jQuery(function(){
-        $('.table').footable({
-        "columns": [{"name":"entity1",title:"Entity1"} ,
-                  {"name":"relation",title:"Relation"},
-                  {"name":"entity2",title:"Entity2"}],
+    else{
+    	relationData['Info'] = '';
+    }
+    tableData.push(relationData);
+
+}
+console.log("222", tableData)
+jQuery(function () {
+    $('.table').footable({
+        "columns": [{ "name": "Id", title: "Id" },
+        { "name": "Name", title: "Name" },
+        { "name": "Info", title: "Info" }],
         "rows": tableData
-        });
     });
+});
 
-    //echarts 数据
-    var data = [] ;
-    var links = [] ;
+//echarts 数据
+var data = [];
+var links = [];
 
-    //构造展示的数据
-    var maxDisPlayNode = 15 ;
-    var id = 0 ;
-    for( var i = 0 ;id < Math.min(maxDisPlayNode,searchResult.length) && i<searchResult.length ; i++ ){
-        //获取node1
-        node1 = {} ;
-        node1['name'] = searchResult[i]['n1']['Name'] ;
-        node1['draggable'] = true ;
-        if('url' in searchResult[i]['n1']){
-            node1['category'] = 1 ;
-        }
-        else{
-            node1['category'] = 2 ;
-        }
-        var flag = 1 ;
-
-        relationTarget = id.toString() ;
-        for(var j = 0 ; j<data.length ;j++){
-        	if(data[j]['name'] === node1['name']){
-        		flag = 0 ;
-        		relationTarget = data[j]['id'] ;
-        		break ;
-        	}
-        }
-
-        node1['id'] = relationTarget ;
-        if(flag === 1){
-        	id++ ;
-        	data.push(node1) ;
-        }
-
-        //获取node2
-        node2 = {} ;
-        node2['name'] = searchResult[i]['n2']['Name'] ;
-        node2['draggable'] = true ;
-        if('url' in searchResult[i]['n2']){
-            node2['category'] = 1 ;
-        }
-        else{
-            node2['category'] = 2 ;
-        }
-        flag = 1 ;
-        relationTarget = id.toString() ;
-        for(var j = 0 ; j<data.length ;j++){
-        	if(data[j]['name'] === node2['name']){
-        		flag = 0 ;
-        		relationTarget = data[j]['id'] ;
-        		break ;
-        	}
-        }
-        node2['id'] = relationTarget ;
-        if(flag === 1){
-        	id++ ;
-        	data.push(node2) ;
-        }
-
-        //获取relation
-        relation = {}
-        relation['source'] = node1['id'];
-        relation['target'] = node2['id'] ;
-        relation['category'] = 0 ;
-        flag = 1;
-        for(var j = 0 ;j<links.length;j++){
-        	if(links[j]['source'] == relation['source'] && links[j]['target'] == relation['target']){
-        		links[j]['value'] = links[j]['value'] + searchResult[i]['rel']['type'] ;
-        		flag = 0 ;
-        		break ;
-        	}
-        }
-        if(flag === 1){
-        	relation['value'] = searchResult[i]['rel']['type'] ;
-        	relation['symbolSize'] = 10;
-        	links.push(relation) ;
-        }
-
+//构造展示的数据
+var maxDisPlayNode = 15;
+var id = 0;
+for (var i = 0; id < Math.min(maxDisPlayNode, entityRelation.length) && i < entityRelation.length; i++) {
+    //获取node1
+    node1 = {};
+    node1['name'] = entityRelation[i]['entity']['Name'];
+    node1['draggable'] = true;
+    if ('url' in entityRelation[i]['entity']) {
+        node1['category'] = 1;
     }
+    else {
+        node1['category'] = 2;
+    }
+    var flag = 1;
+
+    relationTarget = id.toString();
+    for (var j = 0; j < data.length; j++) {
+        if (data[j]['name'] === node1['name']) {
+            flag = 0;
+            relationTarget = data[j]['id'];
+            break;
+        }
+    }
+    node1['id'] = relationTarget;
+    if (flag === 1) {
+        id++;
+        data.push(node1);
+    }
+}
+
 
     //links = []
-    //links = [{'source': '1', 'target': '2', 'category': 0, 'value': 'belong', 'symbolSize': 10},{'source': '1', 'target': '0', 'category': 0, 'value': 'belong', 'symbolSize': 10}]
+    //links = [{'source': '1', 'target': '0', 'category': 0, 'value': 'belong', 'symbolSize': 10},{'source': '0', 'target': '1', 'category': 0, 'value': 'belong', 'symbolSize': 10}]
 
-     // Echarts初始化设置
+    // Echarts初始化设置
     var myChart = echarts.init(document.getElementById('graph'));
-
     option = {
-	    title: {
-	        text: '基于知识图谱的论文管理系统'
-	    },
-	    tooltip: {},
-	    animationDurationUpdate: 1500,
-	    animationEasingUpdate: 'quinticInOut',
-	    label: {
-	        normal: {
-	            show: true,
-	            textStyle: {
-	                fontSize: 12
-	            },
-	        }
-	    },
-	    legend: {
-	        x: "center",
-	        show: false
-	    },
-	    series: [
+        title: {
+            text: ''
+        },
+        tooltip: {},
+        animationDurationUpdate: 1500,
+        animationEasingUpdate: 'quinticInOut',
+        label: {
+            normal: {
+                show: true,
+                textStyle: {
+                    fontSize: 12
+                },
+            }
+        },
+        legend: {
+            x: "center",
+            show: false
+        },
+        series: [
 
-	        {
-	            type: 'graph',
-	            layout: 'force',
-	            symbolSize: 45,
-	            //focusNodeAdjacency: true,
-	            roam: true,
-	            edgeSymbol: ['none', 'arrow'],
-	            categories: [{
-	                name: '查询实体',
-	                itemStyle: {
-	                    normal: {
-	                        color: "#009800",
-	                    }
-	                }
-	            }, {
-	                name: 'Paper',
-	                itemStyle: {
-	                    normal: {
-	                        color: "#4592FF",
-	                    }
-	                }
-	            }, {
-	                name: 'Author',
-	                itemStyle: {
-	                    normal: {
-	                        color: "#C71585",
-	                    }
-	                }
-	            }],
-	            label: {
-	                normal: {
-	                    show: true,
-	                    textStyle: {
-	                        fontSize: 12,
-	                    },
-	                }
-	            },
-	            force: {
-	                repulsion: 1000
-	            },
-	            edgeSymbolSize: [4, 50],
-	            edgeLabel: {
-	                normal: {
-	                    show: true,
-	                    textStyle: {
-	                        fontSize: 10
-	                    },
-	                    formatter: "{c}"
-	                }
-	            },
-	            data: data,
-	            links: links,
-	            lineStyle: {
-	                normal: {
-	                    opacity: 0.9,
-	                    width: 1.3,
-	                    curveness: 0,
-	                    color:"#262626",
-	                }
-	            }
-	        }
-	    ]
-	};
-	// 使用刚指定的配置项和数据显示图表。
-	myChart.setOption(option);
+            {
+                type: 'graph',
+                layout: 'force',
+                symbolSize: 45,
+                //focusNodeAdjacency: true,
+                roam: true,
+                edgeSymbol: ['none', 'arrow'],
+                categories: [{
+                    name: '查询实体',
+                    itemStyle: {
+                        normal: {
+                            color: "#009800",
+                        }
+                    }
+                }, {
+                    name: 'Paper',
+                    itemStyle: {
+                        normal: {
+                            color: "#4592FF",
+                        }
+                    }
+                }, {
+                    name: 'Author',
+                    itemStyle: {
+                        normal: {
+                            color: "#C71585",
+                        }
+                    }
+                }],
+                label: {
+                    normal: {
+                        show: true,
+                        textStyle: {
+                            fontSize: 12,
+                        },
+                    }
+                },
+                force: {
+                    repulsion: 1000
+                },
+                edgeSymbolSize: [4, 50],
+                edgeLabel: {
+                    normal: {
+                        show: true,
+                        textStyle: {
+                            fontSize: 10
+                        },
+                        formatter: "{c}"
+                    }
+                },
+                data: data,
+                links: links,
+                lineStyle: {
+                    normal: {
+                        opacity: 0.9,
+                        width: 1.3,
+                        curveness: 0,
+                        color: "#262626",
+                    }
+                }
+            }
+        ]
+    };
+    // 使用刚指定的配置项和数据显示图表。
+    myChart.setOption(option);
 
 </script>
+
 {% endif %}
 <script>
 	$(".dropdown-menu li a").click(function(){
@@ -291,7 +302,67 @@
 	   else{
 	   	   $("#relation_name").addClass("hide");
 	   }
-	  
+
 	});
+</script>
+
+<script>
+    const select = document.querySelector('#selectBox')
+    const paper = document.querySelector('#Paper-form')
+    const author = document.querySelector('#Author-form')
+    const affiliation = document.querySelector('#Affiliation-form')
+    const venue = document.querySelector('#Venue-form')
+    const concept = document.querySelector('#Concept-form')
+
+    function showform() {
+
+        if (select.value === '1') {
+            paper.style.display = 'block'
+            author.style.display = 'none'
+            affiliation.style.display = 'none'
+            venue.style.display = 'none'
+            concept.style.display = 'none'
+
+        } else if (select.value === '2') {
+            paper.style.display = 'none'
+            author.style.display = 'block'
+            affiliation.style.display = 'none'
+            venue.style.display = 'none'
+            concept.style.display = 'none'
+
+        }else if (select.value === '3') {
+
+            paper.style.display = 'none'
+            author.style.display = 'none'
+            affiliation.style.display = 'block'
+            venue.style.display = 'none'
+            concept.style.display = 'none'
+        }
+        else if (select.value === '4') {
+
+            paper.style.display = 'none'
+            author.style.display = 'none'
+            affiliation.style.display = 'none'
+            venue.style.display = 'block'
+            concept.style.display = 'none'
+        }
+        else if (select.value === '5') {
+
+            paper.style.display = 'none'
+            author.style.display = 'none'
+            affiliation.style.display = 'none'
+            venue.style.display = 'none'
+            concept.style.display = 'block'
+            }
+        else {
+            paper.style.display = 'none'
+            author.style.display = 'none'
+            affiliation.style.display = 'none'
+            venue.style.display = 'none'
+            concept.style.display = 'none'
+
+        }
+
+    }
 </script>
 {% endblock %}
