--- a/templates/update.html
+++ b/templates/update.html
@@ -29,6 +29,12 @@
 				<form method="post" >
 
 					<div class="input-group">
+						<select name = "selectFunction" id="selectFunction" >
+								<option value="0">选择功能</option>
+								<option value="1">添加实体</option>
+								<option value="2">删除实体</option>
+						</select>
+						<br/><br/>
 						<div class="layui-input-inline" style="width: 300px;">
 
 							<select name="selectBox" id="selectBox" lay-filter="selectBox" onchange="showform()" >
