--- a/templates/relation.html
+++ b/templates/relation.html
@@ -12,26 +12,25 @@
     <div class="row">
     <!--head start-->
     <div class="col-md-12">
-        <h3 class="page-header"><i class="fa fa-link" aria-hidden="true"></i> 关系查询 </h3>
             <ol class="breadcrumb">
                 <li><i class="fa fa-home"></i><a href="\search_entity">主页</a></li>
                 <li><i class="fa fa-link" aria-hidden="true"></i>关系查询</li>
             </ol>
     </div>
-    
+
     <div class = "col-md-12">
     	<div class = "panel panel-default">
 			<header class="panel-heading">
-            查询条件：
+            查询条件🍉
        		</header>
        		<div class = "panel-body">
 				<form method="post" action="/search_relation">
                     {{ form.csrf_token }}
 					<div class="input-group">
-						{{ form.entity1(class="form-control", placeholder="实体１", style="width:200px;margin:0px 20px;") }}
-						{{ form.relation(class="form-control", style="width:200px;margin:0px 20px;") }}
-						{{ form.entity2(class="form-control", placeholder="实体2", style="width:200px;margin:0px 20px;") }}
-						{{ form.submit(class="btn btn-primary", style="background-color:#4592fe;margin:0px 20px;") }}
+						{{ form.entity1(class="form-control", placeholder="请输入实体１名称", style="width:350px;margin:10px 10px;") }}
+						{{ form.relation(class="form-control", style="width:150px;margin:0px 20px;") }}
+						{{ form.entity2(class="form-control", placeholder="请输入实体2名称", style="width:350px;margin:10px 10px;") }}
+						{{ form.submit(class="btn btn-primary", style="background-color:#4592fe;margin:10px 10px;") }}
 					</div>
                 </form>
 			</div>
@@ -40,14 +39,16 @@
 	{% if ctx %}
 	<div class = "col-md-12">
 		<div class = "panel panel-default">
+			{% if not message %}
 			<header class = "panel-heading">
-				查询结果：
+				未查询到相关信息🍬！请重新输入
 			</header>
-			<div class = "panel-body">
-				<div style="padding: 2%">
-					<h2>暂未找到相应的匹配</h2>
-				</div>
-			</div>
+			{% endif %}
+			{% if message %}
+			<header class = "panel-heading">
+				{{message}}
+			</header>
+			{% endif %}
 		</div>
 	</div>
 	{% endif %}
@@ -58,7 +59,7 @@
     <div class = "col-md-12">
         <div class="panel panel-default ">
 	        <header class="panel-heading">
-	            关系图 :
+	            关系图🍬
 	        </header>
             <div class = "panel-body ">
                 <div id="graph" style="width: 100%;height:600px;"></div>
@@ -69,7 +70,7 @@
     <div class = "col-md-12">
 	    <div class="panel panel-default">
 	    	<header class="panel-heading">
-	       	 关系列表 :
+	       	 关系列表⭐
 	   		</header>
 	        <div class = "panel-body">
 	            <table class = "table" data-paging =  "true" data-sorting="true"></table>
@@ -105,21 +106,33 @@
     //echarts 数据
     var data = [] ;
     var links = [] ;
-
+	var signal = -1; //信号量为0代表n1为论文，1代表为n1为作者
     //构造展示的数据
     var maxDisPlayNode = 15 ;
     var id = 0 ;
-    for( var i = 0 ;id < Math.min(maxDisPlayNode,searchResult.length) && i<searchResult.length ; i++ ){
+    for( var i = 0 ;id < Math.min(maxDisPlayNode,searchResult.length)+1 && i<searchResult.length+1; i++ ){
         //获取node1
         node1 = {} ;
         node1['name'] = searchResult[i]['n1']['Name'] ;
         node1['draggable'] = true ;
-        if('url' in searchResult[i]['n1']){
-            node1['category'] = 1 ;
+        // 类别
+        if('Year' in searchResult[i]['n1']){   //论文
+            node1['category'] = 0;
+            signal = 0;
+        }
+        else if('own' == searchResult[i]['rel']['type']){  //作者
+            node1['category'] = 1;
+            signal = 1;
+        }
+        else if('refer' == searchResult[i]['rel']['type']){  //作者
+            node1['category'] = 1;
+            signal = 1;
         }
         else{
-            node1['category'] = 2 ;
+        	node1['category'] = 1;
+        	signal = 1;
         }
+
         var flag = 1 ;
 
         relationTarget = id.toString() ;
@@ -141,11 +154,20 @@
         node2 = {} ;
         node2['name'] = searchResult[i]['n2']['Name'] ;
         node2['draggable'] = true ;
-        if('url' in searchResult[i]['n2']){
-            node2['category'] = 1 ;
+       if('Year' in searchResult[i]['n2']){   //论文
+            node2['category'] = 0;
         }
-        else{
-            node2['category'] = 2 ;
+        else if('belong' == searchResult[i]['rel']['type']){
+            if(signal == 0){   //论文-期刊
+            	node2['category'] = 3;
+            }
+            else{  //作者-机构
+            	node2['category'] = 2;
+            }
+
+        }
+        else{   //作者-研究领域
+        	node2['category'] = 4;
         }
         flag = 1 ;
         relationTarget = id.toString() ;
@@ -193,11 +215,42 @@
 
     option = {
 	    title: {
-	        text: ''
-	    },
-	    tooltip: {},
+                text: '知识图谱',     //标题
+                subtext: '',         // 副标题
+                textStyle:{
+                    fontSize:24,
+                },
+                subtextStyle:{
+                    fontSize:12,
+                    color:"pink",
+                },
+            },
+	    tooltip: {    //提示框配置
+                show :true,
+                trigger:'item',
+                snap:true,
+
+                confine: false,      //是否将 tooltip 框限制在图表的区域内
+                formatter: function (x) {
+                    return x.data.name;//设置提示框的内容和格式 节点和边都显示name属性
+                },
+            },
+
+        toolbox: {
+                show : true,//是否显示工具箱
+                feature : {
+                    saveAsImage: {//保存图片
+                        show: true
+                    },
+                    restore: { //数据缩放还原
+                        show: true
+                    },
+                },
+            },
+
 	    animationDurationUpdate: 1500,
 	    animationEasingUpdate: 'quinticInOut',
+
 	    label: {
 	        normal: {
 	            show: true,
@@ -207,57 +260,84 @@
 	        }
 	    },
 	    legend: {
-	        x: "center",
-	        show: false
-	    },
+                x: "center",
+                show: true,
+                data:["论文","作者","机构","期刊","研究领域"],
+            },
 	    series: [
 
 	        {
 	            type: 'graph',
 	            layout: 'force',
-	            symbolSize: 45,
-	            //focusNodeAdjacency: true,
+	            symbolSize: 70,
+	            focusNodeAdjacency: true,
 	            roam: true,
 	            edgeSymbol: ['none', 'arrow'],
-	            categories: [{
-	                name: '查询实体',
-	                itemStyle: {
-	                    normal: {
-	                        color: "#009800",
-	                    }
-	                }
-	            }, {
-	                name: 'Paper',
-	                itemStyle: {
-	                    normal: {
-	                        color: "#4592FF",
-	                    }
-	                }
-	            }, {
-	                name: 'Author',
-	                itemStyle: {
-	                    normal: {
-	                        color: "#C71585",
-	                    }
-	                }
-	            }],
+	            edgeSymbolSize: [4, 10],
+	            categories:
+                    [
+                        {
+                            name: '论文',
+                            itemStyle: {
+                                normal: {
+                                    color: "#4C8EDA",
+                                }
+                            }
+                        },
+                        {
+                            name: '作者',
+                            itemStyle: {
+                                normal: {
+                                    color: "#DA7194",
+                                }
+                            }
+                        },
+                        {
+                            name: '机构',
+                            itemStyle: {
+                                normal: {
+                                    color: "#569480",
+                                }
+                            }
+                        },
+                        {
+                            name: '期刊',
+                            itemStyle: {
+                                normal: {
+                                    color: "#8DCC93",
+                                }
+                            }
+                        },
+                        {
+                            name: '研究领域',
+                            itemStyle: {
+                                normal: {
+                                    color: "#C990C0",
+                                }
+                            }
+                        },
+
+                    ],
+
 	            label: {
 	                normal: {
 	                    show: true,
+	                    position: "inside",
 	                    textStyle: {
-	                        fontSize: 12,
+	                        fontSize: 14,
 	                    },
 	                }
 	            },
 	            force: {
-	                repulsion: 1000
+	                repulsion: 3000,
+	                edgeLength: [50,150]
 	            },
 	            edgeSymbolSize: [4, 50],
 	            edgeLabel: {
 	                normal: {
 	                    show: true,
 	                    textStyle: {
-	                        fontSize: 10
+	                        fontSize: 12
 	                    },
 	                    formatter: "{c}"
 	                }
@@ -268,6 +348,7 @@
 	                normal: {
 	                    opacity: 0.9,
 	                    width: 1.3,
+	                    type: 'solid',
 	                    curveness: 0,
 	                    color:"#262626",
 	                }
