--- a/templates/update_relation.html
+++ b/templates/update_relation.html
@@ -5,33 +5,35 @@
     <meta charset="utf-8" />
 <!--    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>                         -->
     <script src="/static/js/echarts.js"></script>
-    
+
 </head>
 <title>更新关系</title>
 <div class="container">
     <div class="row">
     <!--head start-->
     <div class="col-md-12">
-        <h3 class="page-header"><i class="fa fa-link" aria-hidden="true"></i> 更新关系 </h3>
             <ol class="breadcrumb">
                 <li><i class="fa fa-home"></i><a href="\search_entity">主页</a></li>
                 <li><i class="fa fa-link" aria-hidden="true"></i>关系查询</li>
             </ol>
     </div>
-    
+
     <div class = "col-md-12">
     	<div class = "panel panel-default">
 			<header class="panel-heading">
-            更新条件：
+            更新关系🍉
        		</header>
        		<div class = "panel-body">
 				<form method="post" >
                     {{ form.csrf_token }}
 					<div class="input-group">
-						{{ form.entity1(class="form-control", placeholder="实体１", style="width:200px;margin:0px 20px;") }}
-						{{ form.relation(class="form-control", style="width:200px;margin:0px 20px;") }}
-						{{ form.entity2(class="form-control", placeholder="实体2 ", style="width:200px;margin:0px 20px;") }}
-						{{ form.submit(class="btn btn-primary", style="background-color:#4592fe;margin:0px 20px;") }}
+						{{ form.selectFunction(class="form-control", style="width:150px;margin:10px 10px;") }}
+						<br>
+						{{ form.entity1(class="form-control", placeholder="输入实体１", style="width:350px;margin:10px 10px;") }}
+						{{ form.relation(class="form-control", style="width:150px;margin:10px 10px;") }}
+						{{ form.entity2(class="form-control", placeholder="输入实体2 ", style="width:350px;margin:10px 10px;") }}
+						{{ form.submit1(class="btn btn-primary", style="background-color:#4592fe;margin:s10px 10px;",
+						onclick="{if(confirm('确定要更新此关系信息吗?')){this.document.form.submit1();return true;}return false;}") }}
 					</div>
                 </form>
 			</div>
@@ -41,13 +43,8 @@
 	<div class = "col-md-12">
 		<div class = "panel panel-default">
 			<header class = "panel-heading">
-				更新关系结果：
+				更新失败！🍬未找到对应匹配
 			</header>
-			<div class = "panel-body">
-				<div style="padding: 2%">
-					<h2>暂未找到相应的匹配</h2>
-				</div>
-			</div>
 		</div>
 	</div>
 	{% endif %}
@@ -58,10 +55,10 @@
     <div class = "col-md-12">
         <div class="panel panel-default ">
 	        <header class="panel-heading">
-	            关系图 :
+	            更新成功！🍬
 	        </header>
             <div class = "panel-body ">
-                <div id="graph" style="width: 100%;height:600px;"></div>
+                <div id="graph" style="width: 100%;height:200px;"></div>
             </div>
         </div>
     </div>
@@ -69,7 +66,7 @@
     <div class = "col-md-12">
 	    <div class="panel panel-default">
 	    	<header class="panel-heading">
-	       	 关系列表 :
+	       	 关系列表⭐
 	   		</header>
 	        <div class = "panel-body">
 	            <table class = "table" data-paging =  "true" data-sorting="true"></table>
@@ -104,7 +101,7 @@
     //echarts 数据
     var data = [] ;
     var links = [] ;
-
+	var selectFunction = {{selectFunction}}
     //构造展示的数据
     var maxDisPlayNode = 15 ;
     var id = 0 ;
@@ -181,7 +178,9 @@
         }
 
     }
-
+	if(selectFunction == 2){
+		links = []
+	}
     //links = []
     //links = [{'source': '1', 'target': '0', 'category': 0, 'value': 'belong', 'symbolSize': 10},{'source': '0', 'target': '1', 'category': 0, 'value': 'belong', 'symbolSize': 10}]
 
@@ -291,7 +290,7 @@
 	   else{
 	   	   $("#relation_name").addClass("hide");
 	   }
-	  
+
 	});
 </script>
 {% endblock %}
